changed some api endpoint
